--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "program": "main.ts",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
-      "runtimeArgs": ["run", "--inspect-brk", "--allow-all", "main.ts"],
+      "runtimeArgs": ["run", "--inspect-brk", "--allow-all", "src/main.ts"],
       "attachSimplePort": 9229
     }
   ]
